@@ -12,17 +12,20 @@ import java.util.ArrayList;
 import java.util.concurrent.locks.Lock;
 
 import org.apache.log4j.Logger;
-import org.dom4j.Element;
 
 import prisms.arch.*;
+import prisms.arch.PrismsApplication.ApplicationLock;
 import prisms.arch.ds.*;
+import prisms.arch.ds.Transactor.TransactionOperation;
+import prisms.impl.PrismsChangeTypes.GroupChange;
 import prisms.impl.PrismsChangeTypes.UserChange;
-import prisms.records2.RecordsTransaction;
-import prisms.util.*;
-import prisms.util.DBUtils.TransactionOperation;
+import prisms.records.RecordsTransaction;
+import prisms.util.ArrayUtils;
+import prisms.util.DBUtils;
+import prisms.util.LongList;
 
 /** A {@link prisms.arch.ds.ManageableUserSource} that obtains its information from a database */
-public class DBUserSource implements prisms.arch.ds.ManageableUserSource
+public class DBUserSource implements ScalableUserSource
 {
 	static final Logger log = Logger.getLogger(DBUserSource.class);
 
@@ -37,11 +40,14 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		long thePasswordExpire;
 	}
 
-	DBUtils.Transactor<PrismsException> theTransactor;
+	/** Determines a minimum time that passwords are kept around */
+	public static final long PASSWORD_KEEP_TIME = 5L * 60 * 1000;
+
+	Transactor<PrismsException> theTransactor;
 
 	private PrismsEnv theEnv;
 
-	private prisms.records2.DBRecordKeeper theKeeper;
+	private prisms.records.DBRecordKeeper theKeeper;
 
 	private final java.util.HashMap<String, PrismsApplication> theApps;
 
@@ -59,7 +65,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 
 	private User theSystemUser;
 
-	DBGroup [] theGroupCache;
+	UserGroup [] theGroupCache;
 
 	/** Creates a DBUserSource */
 	public DBUserSource()
@@ -70,39 +76,44 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		theListeners = new ArrayList<UserSetListener>();
 	}
 
-	public prisms.records2.DBRecordKeeper getRecordKeeper()
+	public prisms.records.DBRecordKeeper getRecordKeeper()
 	{
 		return theKeeper;
 	}
 
-	public void configure(Element configEl, PrismsEnv env, PrismsApplication [] apps)
+	public void configure(PrismsConfig config, PrismsEnv env, PrismsApplication [] apps)
 		throws PrismsException
 	{
-		Element connEl = configEl.element("connection");
-		theTransactor = new DBUtils.Transactor<PrismsException>(log, env.getPersisterFactory(),
-			connEl)
-		{
-			@Override
-			public void error(String message) throws PrismsException
+		PrismsConfig connEl = config.subConfig("connection");
+		theTransactor = env.getConnectionFactory().getConnection(connEl, null,
+			new Transactor.Thrower<PrismsException>()
 			{
-				throw new PrismsException(message);
-			}
+				public void error(String message) throws PrismsException
+				{
+					throw new PrismsException(message);
+				}
 
-			@Override
-			public void error(String message, Throwable cause) throws PrismsException
-			{
-				throw new PrismsException(message, cause);
-			}
-		};
+				public void error(String message, Throwable cause) throws PrismsException
+				{
+					throw new PrismsException(message, cause);
+				}
+			});
 		theEnv = env;
 		for(PrismsApplication app : apps)
 			theApps.put(app.getName(), app);
-		theIDs = new DBIDGenerator(theTransactor.getConnection(), theTransactor.getDbOwner());
-		theKeeper = new prisms.records2.DBRecordKeeper("PRISMS", connEl,
-			theEnv.getPersisterFactory(), theIDs);
+		theIDs = env.getIDs();
+		if(theIDs.isShared())
+			theKeeper = new prisms.records.ScaledRecordKeeper("PRISMS", connEl,
+				theEnv.getConnectionFactory(), theIDs);
+		else
+			theKeeper = new prisms.records.DBRecordKeeper("PRISMS", connEl,
+				theEnv.getConnectionFactory(), theIDs);
 		theKeeper.setPersister(new PrismsSyncImpl(this, theApps.values().toArray(
 			new PrismsApplication [theApps.size()])));
-		String anonUser = configEl.elementTextTrim("anonymous");
+		if(theKeeper instanceof prisms.records.ScaledRecordKeeper)
+			((prisms.records.ScaledRecordKeeper) theKeeper)
+				.setScaleImpl((PrismsSyncImpl) theKeeper.getPersister());
+		String anonUser = config.get("anonymous");
 		if(anonUser != null)
 			theAnonymousUserName = anonUser;
 		else
@@ -114,14 +125,13 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		try
 		{
 			stmt = theTransactor.getConnection().createStatement();
-			sql = "SELECT multiple, modulus FROM " + theTransactor.getDbOwner()
+			sql = "SELECT multiple, modulus FROM " + theTransactor.getTablePrefix()
 				+ "PRISMS_HASHING ORDER BY id";
 			rs = stmt.executeQuery(sql);
 			java.util.ArrayList<long []> hashing = new java.util.ArrayList<long []>();
 			while(rs.next())
-			{
 				hashing.add(new long [] {rs.getInt(1), rs.getInt(2)});
-			}
+
 			long [] mults = new long [hashing.size()];
 			long [] mods = new long [hashing.size()];
 			for(int h = 0; h < mults.length; h++)
@@ -140,7 +150,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 				{
 					for(int i = 0; i < theHashing.getPrimaryMultiples().length; i++)
 					{
-						sql = "INSERT INTO " + theTransactor.getDbOwner()
+						sql = "INSERT INTO " + theTransactor.getTablePrefix()
 							+ "prisms_hashing (id, multiple, modulus) VALUES (" + i + ", "
 							+ theHashing.getPrimaryMultiples()[i] + ", "
 							+ theHashing.getPrimaryModulos()[i] + ")";
@@ -193,11 +203,6 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		}
 	}
 
-	public IDGenerator getIDs()
-	{
-		return theIDs;
-	}
-
 	private boolean addingAnonymous;
 
 	private void fillUserCache(Statement stmt) throws PrismsException
@@ -229,7 +234,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 			if(theGroupCache == null)
 				fillGroupCache(stmt);
 			ArrayList<User> userList = new ArrayList<User>();
-			sql = "SELECT * FROM " + theTransactor.getDbOwner() + "prisms_user WHERE deleted="
+			sql = "SELECT * FROM " + theTransactor.getTablePrefix() + "prisms_user WHERE deleted="
 				+ boolToSql(false) + " AND id>=" + IDGenerator.getMinID(theIDs.getCenterID())
 				+ " AND id<=" + IDGenerator.getMaxID(theIDs.getCenterID()) + " ORDER BY id";
 			rs = stmt.executeQuery(sql);
@@ -237,6 +242,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 			while(rs.next())
 			{
 				User user = new User(this, rs.getString("userName"), rs.getLong("id"));
+				user.setLocked(boolFromSql(rs.getString("isLocked")));
 				if(boolFromSql(rs.getString("isAdmin")))
 					user.setAdmin(true);
 				if(boolFromSql(rs.getString("isReadOnly")))
@@ -248,16 +254,16 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 			users = userList.toArray(new User [userList.size()]);
 
 			LongList userIDs = new LongList();
-			IntList groupIDs = new IntList();
+			LongList groupIDs = new LongList();
 			ArrayList<String> appNames = new ArrayList<String>();
-			sql = "SELECT assocUser, id, groupApp FROM " + theTransactor.getDbOwner()
-				+ "prisms_user_group_assoc INNER JOIN " + theTransactor.getDbOwner()
+			sql = "SELECT assocUser, id, groupApp FROM " + theTransactor.getTablePrefix()
+				+ "prisms_user_group_assoc INNER JOIN " + theTransactor.getTablePrefix()
 				+ "prisms_user_group ON assocGroup=id WHERE deleted=" + boolToSql(false);
 			rs = stmt.executeQuery(sql);
 			while(rs.next())
 			{
 				userIDs.add(rs.getLong("assocUser"));
-				groupIDs.add(rs.getInt("id"));
+				groupIDs.add(rs.getLong("id"));
 				appNames.add(rs.getString("groupApp"));
 			}
 			rs.close();
@@ -274,7 +280,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 						log.error("No such application named " + appNames.get(g));
 						break;
 					}
-					DBGroup group = getGroup(groupIDs.get(g), app, stmt);
+					UserGroup group = getGroup(groupIDs.get(g), app, stmt);
 					if(group == null)
 					{
 						log.error("Could not get group with ID " + groupIDs.get(g));
@@ -312,15 +318,6 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		}
 		theUserCache = users;
 
-		long sysID = IDGenerator.getMaxID(theIDs.getCenterID());
-		for(int u = 0; u < theUserCache.length; u++)
-			if(theUserCache[u].getID() == sysID)
-			{
-				theSystemUser = theUserCache[u];
-				theUserCache = ArrayUtils.remove(theUserCache, u);
-				break;
-			}
-
 		if(!ArrayUtils.contains(theUserCache, theAnonymousUser))
 		{
 			addingAnonymous = true;
@@ -353,34 +350,35 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		String sql = null;
 		Lock lock = theTransactor.getLock().writeLock();
 		lock.lock();
-		DBGroup [] groups;
+		UserGroup [] groups;
 		try
 		{
 			if(theGroupCache != null)
 				return; // Already filled before lock received
-			java.util.ArrayList<DBGroup> groupList = new ArrayList<DBGroup>();
-			sql = "SELECT * FROM " + theTransactor.getDbOwner()
+			java.util.ArrayList<UserGroup> groupList = new ArrayList<UserGroup>();
+			sql = "SELECT * FROM " + theTransactor.getTablePrefix()
 				+ "prisms_user_group WHERE deleted=" + boolToSql(false);
 			rs = stmt.executeQuery(sql);
 			while(rs.next())
 			{
 				PrismsApplication app = theApps.get(rs.getString("groupApp"));
-				DBGroup group = new DBGroup(this, rs.getString("groupName"), app, rs.getInt("id"));
+				UserGroup group = new UserGroup(this, rs.getString("groupName"), app,
+					rs.getLong("id"));
 				group.setDescription(rs.getString("groupDescrip"));
 				groupList.add(group);
 			}
 			rs.close();
 			rs = null;
-			groups = groupList.toArray(new DBGroup [groupList.size()]);
+			groups = groupList.toArray(new UserGroup [groupList.size()]);
 
-			ArrayList<Integer> groupIDs = new ArrayList<Integer>();
+			ArrayList<Long> groupIDs = new ArrayList<Long>();
 			ArrayList<String> appNames = new ArrayList<String>();
 			ArrayList<String> permNames = new ArrayList<String>();
-			sql = "SELECT * FROM " + theTransactor.getDbOwner() + "prisms_group_permissions";
+			sql = "SELECT * FROM " + theTransactor.getTablePrefix() + "prisms_group_permissions";
 			rs = stmt.executeQuery(sql);
 			while(rs.next())
 			{
-				groupIDs.add(new Integer(rs.getInt("assocGroup")));
+				groupIDs.add(Long.valueOf(rs.getLong("assocGroup")));
 				appNames.add(rs.getString("pApp"));
 				permNames.add(rs.getString("assocPermission"));
 			}
@@ -388,9 +386,9 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 			rs = null;
 			for(int p = 0; p < permNames.size(); p++)
 			{
-				for(DBGroup g : groups)
+				for(UserGroup g : groups)
 				{
-					if(g.getID() != groupIDs.get(p).intValue())
+					if(g.getID() != groupIDs.get(p).longValue())
 						continue;
 					PrismsApplication app = theApps.get(appNames.get(p));
 					if(app == null)
@@ -434,6 +432,245 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		theGroupCache = groups;
 	}
 
+	public ApplicationStatus getApplicationStatus(PrismsApplication app) throws PrismsException
+	{
+		String sql = "SELECT * FROM " + theTransactor.getTablePrefix()
+			+ "prisms_application_status WHERE application=" + toSQL(app.getName());
+		Statement stmt = null;
+		ResultSet rs = null;
+		try
+		{
+			stmt = theTransactor.getConnection().createStatement();
+			rs = stmt.executeQuery(sql);
+			if(!rs.next())
+				return new ApplicationStatus(null, -1, -1);
+			java.sql.Timestamp time = rs.getTimestamp("lastUpdate");
+			if(time.getTime() < System.currentTimeMillis() - 2L * 60 * 60 * 1000)
+				return new ApplicationStatus(null, -1, -1);
+			String lockMessage = rs.getString("lockMessage");
+			PrismsApplication.ApplicationLock lock;
+			if(lockMessage == null)
+				lock = null;
+			else
+				lock = new PrismsApplication.ApplicationLock(lockMessage, rs.getInt("lockScale"),
+					rs.getInt("lockProgress"), null);
+			Number rProp = (Number) rs.getObject("reloadProperties");
+			Number rSess = (Number) rs.getObject("reloadSessions");
+			return new ApplicationStatus(lock, rProp == null ? -1 : rProp.intValue(), rSess == null
+				? -1 : rSess.intValue());
+		} catch(SQLException e)
+		{
+			throw new PrismsException("Could not get lock for application " + app + ": SQL=" + sql,
+				e);
+		} finally
+		{
+			if(rs != null)
+				try
+				{
+					rs.close();
+				} catch(SQLException e)
+				{
+					log.error("Connection error", e);
+				}
+			if(stmt != null)
+				try
+				{
+					stmt.close();
+				} catch(SQLException e)
+				{
+					log.error("Connection error", e);
+				}
+		}
+	}
+
+	public void setApplicationLock(PrismsApplication app, ApplicationLock lock)
+		throws PrismsException
+	{
+		String sql = "SELECT lockScale FROM " + theTransactor.getTablePrefix()
+			+ "prisms_application_status WHERE application=" + toSQL(app.getName());
+		Statement stmt = null;
+		ResultSet rs = null;
+		try
+		{
+			stmt = theTransactor.getConnection().createStatement();
+			rs = stmt.executeQuery(sql);
+			boolean update = rs.next();
+			rs.close();
+			rs = null;
+			String msg = lock == null ? null : lock.getMessage();
+			int scale = lock == null ? -1 : lock.getScale();
+			int progress = lock == null ? -1 : lock.getProgress();
+			String sqlDate = formatDate(System.currentTimeMillis(),
+				isOracle(theTransactor.getConnection()));
+			String updateSql = "UPDATE " + theTransactor.getTablePrefix()
+				+ "prisms_application_status SET lockMessage=" + toSQL(msg) + ", lockScale="
+				+ scale + ", lockProgress=" + progress + ", lastUpdate=" + sqlDate
+				+ " WHERE application=" + toSQL(app.getName());
+			String insertSql = "INSERT INTO " + theTransactor.getTablePrefix()
+				+ "prisms_application_status"
+				+ " (application, lockMessage, lockScale, lockProgress," + " lastUpdate) VALUES ("
+				+ toSQL(app.getName()) + ", " + toSQL(msg) + ", " + scale + ", " + progress + ", "
+				+ sqlDate + ")";
+			if(update)
+				sql = updateSql;
+			else
+				sql = insertSql;
+			try
+			{
+				stmt.executeUpdate(sql);
+			} catch(SQLException e)
+			{
+				if(!update)
+					sql = updateSql;
+				else
+					throw e;
+				stmt.executeUpdate(sql);
+			}
+		} catch(SQLException e)
+		{
+			throw new PrismsException("Could not set lock for application " + app + ": SQL=" + sql,
+				e);
+		} finally
+		{
+			if(rs != null)
+				try
+				{
+					rs.close();
+				} catch(SQLException e)
+				{
+					log.error("Connection error", e);
+				}
+			if(stmt != null)
+				try
+				{
+					stmt.close();
+				} catch(SQLException e)
+				{
+					log.error("Connection error", e);
+				}
+		}
+	}
+
+	public void reloadProperties(PrismsApplication app) throws PrismsException
+	{
+		String sql = "SELECT lockScale FROM " + theTransactor.getTablePrefix()
+			+ "prisms_application_status WHERE application=" + toSQL(app.getName());
+		Statement stmt = null;
+		ResultSet rs = null;
+		try
+		{
+			stmt = theTransactor.getConnection().createStatement();
+			rs = stmt.executeQuery(sql);
+			boolean update = rs.next();
+			rs.close();
+			rs = null;
+			int commandID = (int) (Math.random() * Integer.MAX_VALUE);
+			String updateSql = "UPDATE " + theTransactor.getTablePrefix()
+				+ "prisms_application_status SET reloadProperties=" + commandID
+				+ " WHERE application=" + toSQL(app.getName());
+			String insertSql = "INSERT INTO " + theTransactor.getTablePrefix()
+				+ "prisms_application_lock" + " (application, reloadProperties) VALUES ("
+				+ toSQL(app.getName()) + ", " + commandID + ")";
+			if(update)
+				sql = updateSql;
+			else
+				sql = insertSql;
+			try
+			{
+				stmt.executeUpdate(sql);
+			} catch(SQLException e)
+			{
+				if(!update)
+					sql = updateSql;
+				else
+					throw e;
+				stmt.executeUpdate(sql);
+			}
+		} catch(SQLException e)
+		{
+			throw new PrismsException("Could not reload properties for application " + app
+				+ ": SQL=" + sql, e);
+		} finally
+		{
+			if(rs != null)
+				try
+				{
+					rs.close();
+				} catch(SQLException e)
+				{
+					log.error("Connection error", e);
+				}
+			if(stmt != null)
+				try
+				{
+					stmt.close();
+				} catch(SQLException e)
+				{
+					log.error("Connection error", e);
+				}
+		}
+	}
+
+	public void reloadSessions(PrismsApplication app) throws PrismsException
+	{
+		String sql = "SELECT lockScale FROM " + theTransactor.getTablePrefix()
+			+ "prisms_application_status WHERE application=" + toSQL(app.getName());
+		Statement stmt = null;
+		ResultSet rs = null;
+		try
+		{
+			stmt = theTransactor.getConnection().createStatement();
+			rs = stmt.executeQuery(sql);
+			boolean update = rs.next();
+			rs.close();
+			rs = null;
+			int commandID = (int) (Math.random() * Integer.MAX_VALUE);
+			String updateSql = "UPDATE " + theTransactor.getTablePrefix()
+				+ "prisms_application_status SET reloadSessions=" + commandID
+				+ " WHERE application=" + toSQL(app.getName());
+			String insertSql = "INSERT INTO " + theTransactor.getTablePrefix()
+				+ "prisms_application_lock" + " (application, reloadSessions) VALUES ("
+				+ toSQL(app.getName()) + ", " + commandID + ")";
+			if(update)
+				sql = updateSql;
+			else
+				sql = insertSql;
+			try
+			{
+				stmt.executeUpdate(sql);
+			} catch(SQLException e)
+			{
+				if(!update)
+					sql = updateSql;
+				else
+					throw e;
+				stmt.executeUpdate(sql);
+			}
+		} catch(SQLException e)
+		{
+			throw new PrismsException("Could not reload properties for application " + app
+				+ ": SQL=" + sql, e);
+		} finally
+		{
+			if(rs != null)
+				try
+				{
+					rs.close();
+				} catch(SQLException e)
+				{
+					log.error("Connection error", e);
+				}
+			if(stmt != null)
+				try
+				{
+					stmt.close();
+				} catch(SQLException e)
+				{
+					log.error("Connection error", e);
+				}
+		}
+	}
+
 	public prisms.arch.ds.PasswordConstraints getPasswordConstraints() throws PrismsException
 	{
 		Statement stmt = null;
@@ -473,7 +710,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		String sql = null;
 		try
 		{
-			sql = "SELECT * FROM " + theTransactor.getDbOwner() + "prisms_password_constraints";
+			sql = "SELECT * FROM " + theTransactor.getTablePrefix() + "prisms_password_constraints";
 			rs = stmt.executeQuery(sql);
 			if(!rs.next())
 				return ret;
@@ -530,12 +767,12 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		try
 		{
 			stmt = theTransactor.getConnection().createStatement();
-			sql = "SELECT constraintsLocked FROM " + theTransactor.getDbOwner()
+			sql = "SELECT constraintsLocked FROM " + theTransactor.getTablePrefix()
 				+ "prisms_password_constraints";
 			rs = stmt.executeQuery(sql);
 			if(rs.next())
 			{
-				sql = "UPDATE " + theTransactor.getDbOwner()
+				sql = "UPDATE " + theTransactor.getTablePrefix()
 					+ "prisms_password_constraints SET constraintsLocked="
 					+ boolToSql(constraints.isLocked()) + ", minCharLength="
 					+ constraints.getMinCharacterLength() + ", minUpperCase="
@@ -548,7 +785,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 			}
 			else
 			{
-				sql = "INSERT INTO " + theTransactor.getDbOwner()
+				sql = "INSERT INTO " + theTransactor.getTablePrefix()
 					+ "prisms_password_constraints (constraintsLocked,"
 					+ " minCharLength, minUpperCase, minLowerCase, minDigits, minSpecialChars,"
 					+ " maxPasswordDuration, numPreviousUnique, minChangeInterval) VALUES ("
@@ -609,7 +846,6 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		{
 			addingSystem = false;
 		}
-		theUserCache = ArrayUtils.remove(theUserCache, theSystemUser);
 		return theSystemUser;
 	}
 
@@ -617,7 +853,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 	{
 		if(theUserCache == null)
 			fillUserCache(null);
-		if(name == null)
+		if(name == null || name.equals(theAnonymousUser.getName()))
 			return theAnonymousUser;
 		for(User user : theUserCache)
 			if(user.getName().equals(name))
@@ -648,7 +884,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		ResultSet rs = null;
 		try
 		{
-			sql = "SELECT * FROM " + theTransactor.getDbOwner()
+			sql = "SELECT * FROM " + theTransactor.getTablePrefix()
 				+ "prisms_user_app_assoc WHERE assocUser=" + user.getID() + " AND assocApp="
 				+ toSQL(app.getName());
 			stmt = theTransactor.getConnection().createStatement();
@@ -702,9 +938,8 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 				closeStmt = true;
 				stmt = theTransactor.getConnection().createStatement();
 			}
-			sql = "SELECT * FROM " + theTransactor.getDbOwner()
+			sql = "SELECT * FROM " + theTransactor.getTablePrefix()
 				+ "prisms_user_password WHERE pwdUser=" + user.getID() + " ORDER BY pwdTime DESC";
-			stmt = theTransactor.getConnection().createStatement();
 			rs = stmt.executeQuery(sql);
 			while(rs.next())
 			{
@@ -741,18 +976,92 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		return data.toArray(new PasswordData [data.size()]);
 	}
 
-	public long [] getKey(User user, Hashing hashing) throws PrismsException
+	public Password getPassword(User user, Hashing hashing) throws PrismsException
 	{
 		PasswordData [] password = getPasswordData(user, true, null);
-		if(password.length == 0)
+		if(password == null || password.length == 0)
 			return null;
-		return hashing.generateKey(password[0].thePasswordHash);
+		return new Password(hashing.generateKey(password[0].thePasswordHash),
+			password[0].thePasswordTime, password[0].thePasswordExpire);
 	}
 
-	public void setPassword(final User user, final long [] hash, final boolean isAdmin)
+	public Password [] getOldPasswords(User user, Hashing hashing) throws PrismsException
+	{
+		PasswordData [] password = getPasswordData(user, false, null);
+		if(password == null || password.length == 0)
+			return null;
+		Password [] ret = new Password [password.length];
+		for(int p = 0; p < ret.length; p++)
+			ret[p] = new Password(hashing.generateKey(password[p].thePasswordHash),
+				password[p].thePasswordTime, password[p].thePasswordExpire);
+		return ret;
+	}
+
+	public Object getDBValue(prisms.records.ChangeRecord record) throws PrismsException
+	{
+		if(record.type.changeType == null || record.type.changeType.getObjectType() == null)
+			return null;
+		if(record.type.subjectType instanceof prisms.records.PrismsChange)
+			return prisms.records.RecordUtils.getDBValue(record, theKeeper.getNamespace(),
+				theTransactor, theKeeper.getPersister());
+		String sql;
+		if(record.type.subjectType instanceof PrismsSubjectType)
+		{
+			switch((PrismsSubjectType) record.type.subjectType)
+			{
+			case user:
+				User user = (User) record.majorSubject;
+				sql = " FROM " + theTransactor.getTablePrefix() + "prisms_user WHERE id="
+					+ user.getID();
+				switch((PrismsChangeTypes.UserChange) record.type.changeType)
+				{
+				case name:
+					return DBUtils.fromSQL(theTransactor.getDBItem(null, "SELECT userName" + sql,
+						String.class));
+				case locked:
+					return Boolean.valueOf(boolFromSql(theTransactor.getDBItem(null,
+						"SELECT isLocked" + sql, String.class)));
+				case admin:
+					return Boolean.valueOf(boolFromSql(theTransactor.getDBItem(null,
+						"SELECT isAdmin" + sql, String.class)));
+				case readOnly:
+					return Boolean.valueOf(boolFromSql(theTransactor.getDBItem(null,
+						"SELECT isReadOnly" + sql, String.class)));
+				case appAccess:
+					return null;
+				case group:
+					return null;
+				}
+				throw new PrismsException("Unrecognized prisms change type: "
+					+ record.type.changeType);
+			case group:
+				UserGroup group = (UserGroup) record.majorSubject;
+				sql = " FROM " + theTransactor.getTablePrefix() + "prisms_user_group WHERE id="
+					+ group.getID();
+				switch((PrismsChangeTypes.GroupChange) record.type.changeType)
+				{
+				case name:
+					return DBUtils.fromSQL(theTransactor.getDBItem(null, "SELECT groupName" + sql,
+						String.class));
+				case descrip:
+					return DBUtils.fromSQL(theTransactor.getDBItem(null, "SELECT groupDescrip"
+						+ sql, String.class));
+				case permission:
+					return null;
+				}
+			}
+			throw new PrismsException("Unrecognized PRISMS subject type: "
+				+ record.type.subjectType);
+		}
+		else
+			throw new PrismsException("Unrecognized subject type: " + record.type.subjectType);
+	}
+
+	public Password setPassword(final User user, final long [] hash, final boolean isAdmin)
 		throws PrismsException
 	{
-		theTransactor.performTransaction(new TransactionOperation<PrismsException>()
+		Object ret;
+		ret = theTransactor.performTransaction(new TransactionOperation<PrismsException>()
 		{
 			public Object run(Statement stmt) throws PrismsException
 			{
@@ -797,17 +1106,22 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 				}
 
 				String sql = null;
+				long exp;
+				if(constraints.getMaxPasswordDuration() > 0)
+					exp = now + constraints.getMaxPasswordDuration();
+				else
+					exp = -1;
 				try
 				{
 					sql = "INSERT INTO "
-						+ theTransactor.getDbOwner()
+						+ theTransactor.getTablePrefix()
 						+ "prisms_user_password (id, pwdUser, pwdData,"
 						+ " pwdTime, pwdExpire) VALUES ("
-						+ IDGenerator.getNextIntID(stmt, theTransactor.getDbOwner()
-							+ "prisms_user_password", "id", null) + ", " + user.getID() + ", "
-						+ DBUtils.toSQL(join(hash)) + ", " + now + ", ";
-					if(constraints.getMaxPasswordDuration() > 0)
-						sql += (now + constraints.getMaxPasswordDuration());
+						+ theIDs.getNextIntID(stmt, "prisms_user_password",
+							theTransactor.getTablePrefix(), "id", null) + ", " + user.getID()
+						+ ", " + DBUtils.toSQL(join(hash)) + ", " + now + ", ";
+					if(exp >= 0)
+						sql += exp;
 					else
 						sql += "NULL";
 					sql += ")";
@@ -816,7 +1130,9 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 					for(int p = password.length - 1; p >= 0
 						&& p >= constraints.getNumPreviousUnique(); p--)
 					{
-						sql = "DELETE FROM " + theTransactor.getDbOwner()
+						if(now - password[p].thePasswordTime < PASSWORD_KEEP_TIME)
+							continue;
+						sql = "DELETE FROM " + theTransactor.getTablePrefix()
 							+ "prisms_user_password WHERE id=" + password[p].id;
 						stmt.execute(sql);
 					}
@@ -825,25 +1141,32 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 					throw new PrismsException("Could not set password data for user " + user
 						+ ": SQL=" + sql, e);
 				}
-				return null;
+				return new Password(hash, now, exp);
 			}
 		}, "Could not set password for user " + user);
+		return (Password) ret;
 	}
 
 	public long getPasswordExpiration(User user) throws PrismsException
 	{
 		PasswordData [] password = getPasswordData(user, true, null);
-		if(password.length == 0)
+		if(password == null || password.length == 0)
 			return Long.MAX_VALUE;
 		return password[0].thePasswordExpire;
 	}
 
 	public void lockUser(User user)
 	{
+		if(user.isAdmin() || user.equals(theAnonymousUser) || user.equals(theSystemUser))
+			return; // Can't lock anonymous, the system user, or an admin user
 		user.setLocked(true);
-		for(UserSetListener listener : theListeners.toArray(new UserSetListener [theListeners
-			.size()]))
-			listener.userChanged(user);
+		try
+		{
+			putUser(user, new RecordsTransaction(user));
+		} catch(PrismsException e)
+		{
+			log.error("Could not lock user " + user, e);
+		}
 	}
 
 	// ManageableUserSource methods now
@@ -863,23 +1186,51 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		return users;
 	}
 
-	public DBGroup [] getGroups(PrismsApplication app) throws PrismsException
+	public UserGroup [] getGroups(PrismsApplication app) throws PrismsException
 	{
 		if(theGroupCache == null)
 			fillGroupCache(null);
-		ArrayList<DBGroup> groups = new ArrayList<DBGroup>();
-		for(DBGroup group : theGroupCache)
+		ArrayList<UserGroup> groups = new ArrayList<UserGroup>();
+		for(UserGroup group : theGroupCache)
 			if(group.getApp() == app)
 				groups.add(group);
-		DBGroup [] ret = groups.toArray(new DBGroup [groups.size()]);
-		java.util.Arrays.sort(ret, new java.util.Comparator<DBGroup>()
+		UserGroup [] ret = groups.toArray(new UserGroup [groups.size()]);
+		java.util.Arrays.sort(ret, new java.util.Comparator<UserGroup>()
 		{
-			public int compare(DBGroup o1, DBGroup o2)
+			public int compare(UserGroup o1, UserGroup o2)
 			{
 				return o1.getName().compareToIgnoreCase(o2.getName());
 			}
 		});
 		return ret;
+	}
+
+	public UserGroup getGroup(long id) throws PrismsException
+	{
+		if(theGroupCache == null)
+			fillGroupCache(null);
+		for(UserGroup g : theGroupCache)
+			if(g.getID() == id)
+				return g;
+		Statement stmt = null;
+		try
+		{
+			stmt = theTransactor.getConnection().createStatement();
+			return dbGetGroup(id, stmt);
+		} catch(SQLException e)
+		{
+			throw new PrismsException("Could not create statement", e);
+		} finally
+		{
+			if(stmt != null)
+				try
+				{
+					stmt.close();
+				} catch(SQLException e)
+				{
+					log.error("Connection error", e);
+				}
+		}
 	}
 
 	public void setPasswordExpiration(final User user, final long time) throws PrismsException
@@ -903,7 +1254,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 					toSet = "" + time;
 				else
 					toSet = "NULL";
-				sql = "UPDATE " + theTransactor.getDbOwner()
+				sql = "UPDATE " + theTransactor.getTablePrefix()
 					+ "prisms_user_password SET pwdExpire=" + toSet + " WHERE id=" + password[0].id;
 				try
 				{
@@ -919,19 +1270,17 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 	}
 
 	void addModification(RecordsTransaction trans, PrismsSubjectType subjectType,
-		prisms.records2.ChangeType changeType, int add, Object majorSubject, Object minorSubject,
+		prisms.records.ChangeType changeType, int add, Object majorSubject, Object minorSubject,
 		Object previousValue, Object data1, Object data2) throws PrismsException
 	{
-		if(trans == null || theKeeper == null)
+		if(trans == null || !trans.shouldRecord() || theKeeper == null)
 			return;
-		if(!trans.shouldPersist())
-			return;
-		prisms.records2.ChangeRecord record;
+		prisms.records.ChangeRecord record;
 		try
 		{
-			record = theKeeper.persist(trans.getUser(), subjectType, changeType, add, majorSubject,
+			record = theKeeper.persist(trans, subjectType, changeType, add, majorSubject,
 				minorSubject, previousValue, data1, data2);
-		} catch(prisms.records2.PrismsRecordException e)
+		} catch(prisms.records.PrismsRecordException e)
 		{
 			throw new PrismsException("Could not persist change record", e);
 		}
@@ -940,7 +1289,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 			try
 			{
 				theKeeper.associate(record, trans.getRecord(), false);
-			} catch(prisms.records2.PrismsRecordException e)
+			} catch(prisms.records.PrismsRecordException e)
 			{
 				log.error("Could not associate change record with sync record", e);
 			}
@@ -950,11 +1299,18 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 	public void setUserAccess(final User user, final PrismsApplication app,
 		final boolean accessible, final RecordsTransaction trans) throws PrismsException
 	{
+		if(trans != null && trans.isMemoryOnly())
+		{
+			for(UserSetListener listener : theListeners.toArray(new UserSetListener [theListeners
+				.size()]))
+				listener.userChanged(user);
+			return;
+		}
 		theTransactor.performTransaction(new TransactionOperation<PrismsException>()
 		{
 			public Object run(Statement stmt) throws PrismsException
 			{
-				String sql = "SELECT * FROM " + theTransactor.getDbOwner()
+				String sql = "SELECT * FROM " + theTransactor.getTablePrefix()
 					+ "prisms_user_app_assoc WHERE assocUser=" + (user).getID() + " AND assocApp="
 					+ toSQL(app.getName());
 				ResultSet rs = null;
@@ -970,7 +1326,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 					{
 						addModification(trans, PrismsSubjectType.user, UserChange.appAccess, 1,
 							user, app, null, null, null);
-						sql = "INSERT INTO " + theTransactor.getDbOwner()
+						sql = "INSERT INTO " + theTransactor.getTablePrefix()
 							+ "prisms_user_app_assoc (assocUser, assocApp) VALUES ("
 							+ (user).getID() + ", " + toSQL(app.getName()) + ")";
 					}
@@ -978,7 +1334,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 					{
 						addModification(trans, PrismsSubjectType.user, UserChange.appAccess, -1,
 							user, app, null, null, null);
-						sql = "DELETE FROM " + theTransactor.getDbOwner()
+						sql = "DELETE FROM " + theTransactor.getTablePrefix()
 							+ "prisms_user_app_assoc WHERE assocUser=" + (user).getID()
 							+ " AND assocApp=" + toSQL(app.getName());
 					}
@@ -1017,7 +1373,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		{
 			stmt = theTransactor.getConnection().createStatement();
 			ArrayList<User> userList = new ArrayList<User>();
-			sql = "SELECT * FROM " + theTransactor.getDbOwner() + "prisms_user ORDER BY id";
+			sql = "SELECT * FROM " + theTransactor.getTablePrefix() + "prisms_user ORDER BY id";
 			rs = stmt.executeQuery(sql);
 			java.util.HashSet<User> readOnlyUsers = new java.util.HashSet<User>();
 			while(rs.next())
@@ -1036,6 +1392,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 					continue;
 				}
 				user = new User(this, rs.getString("userName"), id);
+				user.setLocked(boolFromSql(rs.getString("isLocked")));
 				if(boolFromSql(rs.getString("isAdmin")))
 					user.setAdmin(true);
 				if(boolFromSql(rs.getString("isReadOnly")))
@@ -1049,16 +1406,16 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 			users = userList.toArray(new User [userList.size()]);
 
 			LongList userIDs = new LongList();
-			IntList groupIDs = new IntList();
+			LongList groupIDs = new LongList();
 			ArrayList<String> appNames = new ArrayList<String>();
-			sql = "SELECT assocUser, id, groupApp FROM " + theTransactor.getDbOwner()
-				+ "prisms_user_group_assoc INNER JOIN " + theTransactor.getDbOwner()
+			sql = "SELECT assocUser, id, groupApp FROM " + theTransactor.getTablePrefix()
+				+ "prisms_user_group_assoc INNER JOIN " + theTransactor.getTablePrefix()
 				+ "prisms_user_group ON assocGroup=id WHERE deleted=" + boolToSql(false);
 			rs = stmt.executeQuery(sql);
 			while(rs.next())
 			{
 				userIDs.add(rs.getLong("assocUser"));
-				groupIDs.add(rs.getInt("id"));
+				groupIDs.add(rs.getLong("id"));
 				appNames.add(rs.getString("groupApp"));
 			}
 			rs.close();
@@ -1075,7 +1432,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 						log.error("No such application named " + appNames.get(g));
 						break;
 					}
-					DBGroup group = getGroup(groupIDs.get(g), app, stmt);
+					UserGroup group = getGroup(groupIDs.get(g), app, stmt);
 					if(group == null)
 					{
 						log.error("Could not get group with ID " + groupIDs.get(g));
@@ -1129,6 +1486,37 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 
 	public void putUser(final User user, final RecordsTransaction trans) throws PrismsException
 	{
+		if(trans != null && trans.isMemoryOnly())
+		{
+			User cacheUser = null;
+			if(user.equals(theSystemUser))
+				cacheUser = theSystemUser;
+			else if(user.equals(theAnonymousUser))
+				cacheUser = theAnonymousUser;
+			else
+			{
+				int idx = ArrayUtils.indexOf(theUserCache, user);
+				if(idx >= 0)
+					cacheUser = theUserCache[idx];
+			}
+			if(cacheUser != null)
+			{
+				if(user != cacheUser)
+					dbUpdateUser(cacheUser, user, null, trans);
+				else
+					for(UserSetListener listener : theListeners
+						.toArray(new UserSetListener [theListeners.size()]))
+						listener.userChanged(user);
+			}
+			else
+			{
+				theUserCache = ArrayUtils.add(theUserCache, user);
+				for(UserSetListener listener : theListeners
+					.toArray(new UserSetListener [theListeners.size()]))
+					listener.userSetChanged(theUserCache.clone());
+			}
+			return;
+		}
 		if(user.equals(theSystemUser) && !addingSystem)
 			throw new PrismsException("Cannot modify the system user");
 		if(user.equals(theAnonymousUser) && !addingAnonymous)
@@ -1154,19 +1542,23 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 				else
 				{
 					boolean recreate = dbUser.isDeleted() != user.isDeleted();
-					dbUpdateUser(dbUser, user, stmt, trans);
+					boolean authChange = dbUpdateUser(dbUser, user, stmt, trans);
 					if(theIDs.belongs(user.getID()))
 					{
 						if(recreate)
 						{
 							for(UserSetListener listener : theListeners
 								.toArray(new UserSetListener [theListeners.size()]))
-								listener.userSetChanged(theUserCache);
+								listener.userSetChanged(theUserCache.clone());
 						}
 						else
 							for(UserSetListener listener : theListeners
 								.toArray(new UserSetListener [theListeners.size()]))
+							{
 								listener.userChanged(user);
+								if(authChange)
+									listener.userAuthorityChanged(user);
+							}
 					}
 				}
 				return null;
@@ -1180,7 +1572,8 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		{
 			public Object run(Statement stmt) throws PrismsException
 			{
-				dbRemoveUser(user, stmt, trans);
+				if(trans != null && !trans.isMemoryOnly())
+					dbRemoveUser(user, stmt, trans);
 				int idx = ArrayUtils.indexOf(theUserCache, user);
 				if(idx >= 0)
 				{
@@ -1194,100 +1587,117 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		}, "Could not delete user " + user);
 	}
 
-	public UserGroup createGroup(final PrismsApplication app, final String name)
-		throws PrismsException
+	public UserGroup createGroup(final PrismsApplication app, final String name,
+		RecordsTransaction trans) throws PrismsException
 	{
 		if(name == null)
 			throw new PrismsException("Cannot create group with no name");
-		return (UserGroup) theTransactor.performTransaction(
-			new TransactionOperation<PrismsException>()
-			{
-				public Object run(Statement stmt) throws PrismsException
-				{
-					if(hasGroup(app, name, stmt))
-						throw new PrismsException("Group " + name
-							+ " already exists for application " + app);
-					DBGroup group = new DBGroup(DBUserSource.this, name, app, -1);
-					putGroup(group, stmt);
-					return group;
-				}
-			}, "Could not create group " + name);
+		UserGroup ret = new UserGroup(this, name, app, -1);
+		putGroup(ret, trans);
+		return ret;
 	}
 
-	boolean hasGroup(PrismsApplication app, String groupName, Statement stmt)
+	public void putGroup(final UserGroup group, final RecordsTransaction trans)
 		throws PrismsException
 	{
-		String sql = null;
-		ResultSet rs = null;
-		try
+		if(trans != null && trans.isMemoryOnly())
 		{
-			sql = "SELECT id FROM " + theTransactor.getDbOwner()
-				+ "prisms_user_group WHERE groupApp = " + toSQL(app.getName()) + " AND groupName="
-				+ toSQL(groupName);
-			rs = stmt.executeQuery(sql);
-			return rs.next();
-		} catch(SQLException e)
-		{
-			throw new PrismsException("Error getting group " + groupName + " for app " + app
-				+ ": SQL=" + sql, e);
-		} finally
-		{
-			if(rs != null)
-				try
-				{
-					rs.close();
-				} catch(SQLException e)
-				{}
+			UserGroup cacheGroup = null;
+			int idx = ArrayUtils.indexOf(theGroupCache, group);
+			if(idx >= 0)
+				cacheGroup = theGroupCache[idx];
+			if(cacheGroup != null)
+			{
+				if(group != cacheGroup)
+					dbUpdateGroup(cacheGroup, group, null, trans);
+				else
+					for(UserSetListener listener : theListeners
+						.toArray(new UserSetListener [theListeners.size()]))
+						listener.groupChanged(group);
+			}
+			else
+			{
+				theGroupCache = ArrayUtils.add(theGroupCache, group);
+				for(UserSetListener listener : theListeners
+					.toArray(new UserSetListener [theListeners.size()]))
+					listener.groupSetChanged(group.getApp(), getGroups(group.getApp()));
+			}
+			return;
 		}
-	}
-
-	public void putGroup(final UserGroup group) throws PrismsException
-	{
-		if(!(group instanceof DBGroup))
-			throw new PrismsException("Group " + group + " was not created by this user source");
 		theTransactor.performTransaction(new TransactionOperation<PrismsException>()
 		{
 			public Object run(Statement stmt) throws PrismsException
 			{
-				DBGroup setGroup = (DBGroup) group;
-				putGroup(setGroup, stmt);
+				UserGroup dbGroup = group.getID() < 0 ? null : dbGetGroup(group.getID(), stmt);
+				if(dbGroup == null)
+				{
+					dbInsertGroup(group, stmt, trans);
+					if(theIDs.belongs(group.getID()))
+					{
+						theGroupCache = ArrayUtils.add(theGroupCache, group);
+						for(UserSetListener listener : theListeners
+							.toArray(new UserSetListener [theListeners.size()]))
+							listener.groupSetChanged(group.getApp(), getGroups(group.getApp()));
+					}
+				}
+				else
+				{
+					boolean recreate = dbGroup.isDeleted() != group.isDeleted();
+					boolean authChange = dbUpdateGroup(dbGroup, group, stmt, trans);
+					if(authChange)
+						for(User user : theUserCache)
+						{
+							if(ArrayUtils.contains(user.getGroups(), group))
+								for(UserSetListener listener : theListeners
+									.toArray(new UserSetListener [theListeners.size()]))
+									listener.userAuthorityChanged(user);
+						}
+
+					if(theIDs.belongs(group.getID()))
+					{
+						if(recreate)
+						{
+							for(UserSetListener listener : theListeners
+								.toArray(new UserSetListener [theListeners.size()]))
+								listener.groupSetChanged(group.getApp(), getGroups(group.getApp()));
+						}
+						else
+							for(UserSetListener listener : theListeners
+								.toArray(new UserSetListener [theListeners.size()]))
+								listener.groupChanged(group);
+					}
+				}
 				return null;
 			}
 		}, "Could not add/modify user group " + group);
 	}
 
-	void putGroup(DBGroup group, Statement stmt) throws PrismsException
+	public void deleteGroup(final UserGroup group, final RecordsTransaction trans)
+		throws PrismsException
 	{
-		DBGroup dbGroup = dbGetGroup(group.getID(), group.getApp(), stmt);
-		if(dbGroup == null)
-		{
-			dbInsertGroup(group, stmt);
-			theGroupCache = ArrayUtils.add(theGroupCache, group);
-		}
-		else
-			dbUpdateGroup(dbGroup, group, stmt);
-	}
-
-	public void deleteGroup(final UserGroup group) throws PrismsException
-	{
-		if(!(group instanceof DBGroup))
-			throw new PrismsException("Group " + group + " was not created by this user source");
 		theTransactor.performTransaction(new TransactionOperation<PrismsException>()
 		{
 			public Object run(Statement stmt) throws PrismsException
 			{
-				dbRemoveGroup((DBGroup) group, stmt);
+				if(trans != null && !trans.isMemoryOnly())
+					dbRemoveGroup(group, stmt, trans);
 				for(User user : theUserCache)
 				{
 					if(ArrayUtils.contains(user.getGroups(), group))
 					{
 						user.removeFrom(group);
-						for(UserSetListener listener : theListeners
-							.toArray(new UserSetListener [theListeners.size()]))
-							listener.userChanged(user);
+						putUser(user, trans);
 					}
 				}
-				theGroupCache = ArrayUtils.remove(theGroupCache, (DBGroup) group);
+
+				int idx = ArrayUtils.indexOf(theGroupCache, group);
+				if(idx >= 0)
+				{
+					theGroupCache = ArrayUtils.remove(theGroupCache, group);
+					for(UserSetListener listener : theListeners
+						.toArray(new UserSetListener [theListeners.size()]))
+						listener.groupSetChanged(group.getApp(), getGroups(group.getApp()));
+				}
 				return null;
 			}
 		}, "Could not delete group " + group);
@@ -1301,14 +1711,8 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		theHashing = null;
 		if(theTransactor == null)
 			return;
-		try
-		{
-			theTransactor.disconnect();
-		} catch(PrismsException e)
-		{
-			log.error("Could not disconnect from PRISMS data source", e);
-		}
-		theTransactor = null;
+		theKeeper.disconnect();
+		theTransactor.release();
 	}
 
 	// Implementation methods here
@@ -1324,7 +1728,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		ResultSet rs = null;
 		try
 		{
-			sql = "SELECT * FROM " + theTransactor.getDbOwner() + "prisms_user WHERE id=" + id;
+			sql = "SELECT * FROM " + theTransactor.getTablePrefix() + "prisms_user WHERE id=" + id;
 			if(stmt == null)
 			{
 				closeAfter = true;
@@ -1335,20 +1739,21 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 				return null;
 			boolean readOnly = boolFromSql(rs.getString("isReadOnly"));
 			User ret = new User(this, rs.getString("userName"), id);
+			ret.setLocked(boolFromSql(rs.getString("isLocked")));
 			ret.setAdmin(boolFromSql(rs.getString("isAdmin")));
 			ret.setDeleted(boolFromSql(rs.getString("deleted")));
 			rs.close();
 			rs = null;
 
-			sql = "SELECT id, groupApp FROM " + theTransactor.getDbOwner()
-				+ "prisms_user_group_assoc INNER JOIN " + theTransactor.getDbOwner()
+			sql = "SELECT id, groupApp FROM " + theTransactor.getTablePrefix()
+				+ "prisms_user_group_assoc INNER JOIN " + theTransactor.getTablePrefix()
 				+ "prisms_user_group ON assocGroup=id WHERE assocUser=" + id;
 			rs = stmt.executeQuery(sql);
-			ArrayList<Integer> groupIDs = new ArrayList<Integer>();
+			ArrayList<Long> groupIDs = new ArrayList<Long>();
 			ArrayList<String> appNames = new ArrayList<String>();
 			while(rs.next())
 			{
-				groupIDs.add(new Integer(rs.getInt(1)));
+				groupIDs.add(Long.valueOf(rs.getLong(1)));
 				appNames.add(rs.getString(2));
 			}
 			rs.close();
@@ -1362,7 +1767,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 					continue;
 				}
 
-				DBGroup group = getGroup(groupIDs.get(g).intValue(), app, stmt);
+				UserGroup group = getGroup(groupIDs.get(g).longValue(), app, stmt);
 				if(group == null)
 				{
 					log.error("Could not get group for ID " + groupIDs.get(g));
@@ -1399,14 +1804,16 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 	void dbInsertUser(User user, Statement stmt) throws PrismsException
 	{
 		if(user.getID() < 0)
-			user.setID(theIDs.getNextID(stmt, "prisms_user", "id", null, null, null));
+			user.setID(theIDs.getNextID("prisms_user", "id", stmt, theTransactor.getTablePrefix(),
+				null));
 		String sql = null;
 		try
 		{
-			sql = "INSERT INTO " + theTransactor.getDbOwner()
-				+ "prisms_user (id, userName, isAdmin, isReadOnly," + " deleted)" + " VALUES ("
-				+ user.getID() + ", " + toSQL(user.getName()) + ", " + boolToSql(user.isAdmin())
-				+ ", " + boolToSql(user.isReadOnly()) + ", " + boolToSql(false) + ")";
+			sql = "INSERT INTO " + theTransactor.getTablePrefix()
+				+ "prisms_user (id, userName, isAdmin, isReadOnly, isLocked, deleted)"
+				+ " VALUES (" + user.getID() + ", " + toSQL(user.getName()) + ", "
+				+ boolToSql(user.isAdmin()) + ", " + boolToSql(user.isReadOnly()) + ", "
+				+ boolToSql(user.isLocked()) + ", " + boolToSql(false) + ")";
 			stmt.execute(sql);
 		} catch(SQLException e)
 		{
@@ -1414,31 +1821,11 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		}
 	}
 
-	void dbUpdateUser(final User dbUser, User setUser, final Statement stmt,
-		RecordsTransaction trans) throws PrismsException
+	boolean dbUpdateUser(final User dbUser, User setUser, final Statement stmt,
+		final RecordsTransaction trans) throws PrismsException
 	{
+		final boolean [] authChange = new boolean [] {false};
 		String update = "";
-		if(!dbUser.getName().equals(setUser.getName()))
-		{
-			update += "userName=" + toSQL(setUser.getName()) + ", ";
-			addModification(trans, PrismsSubjectType.user, UserChange.name, 0, setUser, null,
-				dbUser.getName(), null, null);
-			dbUser.setName(setUser.getName());
-		}
-		if(dbUser.isAdmin() != setUser.isAdmin())
-		{
-			update += "isAdmin=" + boolToSql(setUser.isAdmin()) + ", ";
-			addModification(trans, PrismsSubjectType.user, UserChange.admin, 0, setUser, null,
-				Boolean.valueOf(dbUser.isAdmin()), null, null);
-			dbUser.setAdmin(setUser.isAdmin());
-		}
-		if(dbUser.isReadOnly() != setUser.isReadOnly())
-		{
-			update += "isReadOnly=" + boolToSql(setUser.isReadOnly()) + ", ";
-			addModification(trans, PrismsSubjectType.user, UserChange.readOnly, 0, setUser, null,
-				Boolean.valueOf(dbUser.isReadOnly()), null, null);
-			dbUser.setReadOnly(setUser.isReadOnly());
-		}
 		if(dbUser.isDeleted() != setUser.isDeleted())
 		{
 			update += "deleted=" + boolToSql(setUser.isDeleted()) + ", ";
@@ -1454,68 +1841,54 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 			}
 		}
 
-		if(update.length() > 0)
-		{
-			update = update.substring(0, update.length() - 2);
-			String sql = null;
-			try
-			{
-				sql = "UPDATE " + theTransactor.getDbOwner() + "prisms_user SET " + update
-					+ " WHERE id=" + dbUser.getID();
-				stmt.executeUpdate(sql);
-			} catch(SQLException e)
-			{
-				throw new PrismsException("Could not update user: SQL=" + sql, e);
-			}
-		}
-
 		ArrayUtils.adjust(dbUser.getGroups(), setUser.getGroups(),
-			new ArrayUtils.DifferenceListener<UserGroup, UserGroup>()
+			new ArrayUtils.DifferenceListenerE<UserGroup, UserGroup, PrismsException>()
 			{
 				public boolean identity(UserGroup o1, UserGroup o2)
 				{
 					return equal(o1, o2);
 				}
 
-				public UserGroup added(UserGroup o, int idx, int retIdx)
+				public UserGroup added(UserGroup o, int idx, int retIdx) throws PrismsException
 				{
-					if(!(o instanceof DBGroup))
-					{
-						log.error("Can't add group " + o + ": not correct implementation");
-						return null;
-					}
 					String sql = null;
 					try
 					{
-						sql = "INSERT INTO " + theTransactor.getDbOwner()
+						sql = "INSERT INTO " + theTransactor.getTablePrefix()
 							+ "prisms_user_group_assoc (assocUser, assocGroup) VALUES ("
-							+ dbUser.getID() + ", " + ((DBGroup) o).getID() + ")";
-						stmt.execute(sql);
+							+ dbUser.getID() + ", " + o.getID() + ")";
+						if(stmt != null)
+							stmt.execute(sql);
 					} catch(SQLException e)
 					{
 						log.error("Could not insert group membership: SQL=" + sql, e);
 					}
+					dbUser.addTo(o);
+					addModification(trans, PrismsSubjectType.user, UserChange.group, 1, dbUser, o,
+						null, null, null);
+					authChange[0] = true;
 					return o;
 				}
 
 				public UserGroup removed(UserGroup o, int idx, int incMod, int retIdx)
+					throws PrismsException
 				{
-					if(!(o instanceof DBGroup))
-					{
-						log.error("Can't remove group " + o + ": not correct implementation");
-						return null;
-					}
 					String sql = null;
 					try
 					{
-						sql = "DELETE FROM " + theTransactor.getDbOwner()
+						sql = "DELETE FROM " + theTransactor.getTablePrefix()
 							+ "prisms_user_group_assoc WHERE assocUser=" + dbUser.getID()
-							+ " AND assocGroup=" + ((DBGroup) o).getID();
-						stmt.execute(sql);
+							+ " AND assocGroup=" + o.getID();
+						if(stmt != null)
+							stmt.execute(sql);
 					} catch(SQLException e)
 					{
 						log.error("Could not remove group membership: SQL=" + sql, e);
 					}
+					dbUser.removeFrom(o);
+					addModification(trans, PrismsSubjectType.user, UserChange.group, -1, dbUser, o,
+						null, null, null);
+					authChange[0] = true;
 					return null;
 				}
 
@@ -1525,16 +1898,64 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 					return o1;
 				}
 			});
+
+		if(!dbUser.getName().equals(setUser.getName()))
+		{
+			update += "userName=" + toSQL(setUser.getName()) + ", ";
+			addModification(trans, PrismsSubjectType.user, UserChange.name, 0, setUser, null,
+				dbUser.getName(), null, null);
+			dbUser.setName(setUser.getName());
+		}
+		if(dbUser.isAdmin() != setUser.isAdmin())
+		{
+			update += "isAdmin=" + boolToSql(setUser.isAdmin()) + ", ";
+			addModification(trans, PrismsSubjectType.user, UserChange.admin, 0, setUser, null,
+				Boolean.valueOf(dbUser.isAdmin()), null, null);
+			dbUser.setAdmin(setUser.isAdmin());
+			authChange[0] = true;
+		}
+		if(dbUser.isLocked() != setUser.isLocked())
+		{
+			update += "isLocked=" + boolToSql(setUser.isLocked()) + ", ";
+			addModification(trans, PrismsSubjectType.user, UserChange.locked, 0, setUser, null,
+				Boolean.valueOf(dbUser.isLocked()), null, null);
+			dbUser.setLocked(setUser.isLocked());
+		}
+		if(dbUser.isReadOnly() != setUser.isReadOnly())
+		{
+			update += "isReadOnly=" + boolToSql(setUser.isReadOnly()) + ", ";
+			addModification(trans, PrismsSubjectType.user, UserChange.readOnly, 0, setUser, null,
+				Boolean.valueOf(dbUser.isReadOnly()), null, null);
+			dbUser.setReadOnly(setUser.isReadOnly());
+		}
+
+		if(update.length() > 0)
+		{
+			update = update.substring(0, update.length() - 2);
+			String sql = null;
+			try
+			{
+				sql = "UPDATE " + theTransactor.getTablePrefix() + "prisms_user SET " + update
+					+ " WHERE id=" + dbUser.getID();
+				if(stmt != null)
+					stmt.executeUpdate(sql);
+			} catch(SQLException e)
+			{
+				throw new PrismsException("Could not update user: SQL=" + sql, e);
+			}
+		}
+
+		return authChange[0];
 	}
 
 	void dbRemoveUser(User user, Statement stmt, RecordsTransaction trans) throws PrismsException
 	{
-		// String sql = "DELETE FROM " + theTransactor.getDbOwner() + "prisms_user WHERE id=" +
+		// String sql = "DELETE FROM " + theTransactor.getTablePrefix() + "prisms_user WHERE id=" +
 		// user.getID();
 		String sql = null;
 		try
 		{
-			sql = "UPDATE " + theTransactor.getDbOwner() + "prisms_user SET deleted="
+			sql = "UPDATE " + theTransactor.getTablePrefix() + "prisms_user SET deleted="
 				+ boolToSql(true) + " WHERE id=" + user.getID();
 			stmt.execute(sql);
 		} catch(SQLException e)
@@ -1544,16 +1965,16 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		addModification(trans, PrismsSubjectType.user, null, -1, user, null, null, null, null);
 	}
 
-	private DBGroup getGroup(int id, PrismsApplication app, Statement stmt) throws PrismsException
+	private UserGroup getGroup(long id, PrismsApplication app, Statement stmt)
+		throws PrismsException
 	{
-		for(DBGroup group : theGroupCache)
+		for(UserGroup group : theGroupCache)
 			if(group.getID() == id)
 				return group;
-		return dbGetGroup(id, app, stmt);
+		return dbGetGroup(id, stmt);
 	}
 
-	private DBGroup dbGetGroup(int id, PrismsApplication app, Statement stmt)
-		throws PrismsException
+	UserGroup dbGetGroup(long id, Statement stmt) throws PrismsException
 	{
 		if(id < 0)
 			return null;
@@ -1561,18 +1982,21 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		ResultSet rs = null;
 		try
 		{
-			sql = "SELECT * FROM " + theTransactor.getDbOwner() + "prisms_user_group WHERE id="
+			sql = "SELECT * FROM " + theTransactor.getTablePrefix() + "prisms_user_group WHERE id="
 				+ id;
 			rs = stmt.executeQuery(sql);
 			if(!rs.next())
 				return null;
-			DBGroup ret = new DBGroup(this, rs.getString("groupName"), app, id);
+			PrismsApplication app = theApps.get(rs.getString("groupApp"));
+			if(app == null)
+				throw new PrismsException("No such application: " + rs.getString("groupApp"));
+			UserGroup ret = new UserGroup(this, rs.getString("groupName"), app, id);
 			ret.setDescription(rs.getString("groupDescrip"));
 			ret.setDeleted(boolFromSql(rs.getString("deleted")));
 			rs.close();
 			rs = null;
 
-			sql = "SELECT assocPermission FROM " + theTransactor.getDbOwner()
+			sql = "SELECT assocPermission FROM " + theTransactor.getTablePrefix()
 				+ "prisms_group_permissions WHERE assocGroup=" + id + " AND pApp="
 				+ toSQL(app.getName());
 			rs = stmt.executeQuery(sql);
@@ -1605,14 +2029,16 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		}
 	}
 
-	private void dbInsertGroup(DBGroup group, Statement stmt) throws PrismsException
+	void dbInsertGroup(UserGroup group, Statement stmt, RecordsTransaction trans)
+		throws PrismsException
 	{
 		String sql = null;
 		try
 		{
-			group.setID(IDGenerator.getNextIntID(stmt, theTransactor.getDbOwner()
-				+ "prisms_user_group", "id", null));
-			sql = "INSERT INTO " + theTransactor.getDbOwner()
+			if(group.getID() < 0)
+				group.setID(theIDs.getNextID("prisms_user_group", "id", stmt,
+					theTransactor.getTablePrefix(), null));
+			sql = "INSERT INTO " + theTransactor.getTablePrefix()
 				+ "prisms_user_group (id, groupApp, groupName, groupDescrip, deleted) VALUES ("
 				+ group.getID() + ", " + toSQL(group.getApp().getName()) + ", "
 				+ toSQL(group.getName()) + ", " + toSQL(group.getDescription()) + ", "
@@ -1622,16 +2048,15 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 		{
 			throw new PrismsException("Could not insert group: SQL=" + sql, e);
 		}
+		addModification(trans, PrismsSubjectType.group, null, 1, group, null, null, group.getApp(),
+			null);
 	}
 
-	private void dbUpdateGroup(final DBGroup dbGroup, DBGroup setGroup, final Statement stmt)
-		throws PrismsException
+	boolean dbUpdateGroup(final UserGroup dbGroup, UserGroup setGroup, final Statement stmt,
+		final RecordsTransaction trans) throws PrismsException
 	{
+		final boolean [] authChange = new boolean [] {false};
 		String update = "";
-		if(!dbGroup.getName().equals(setGroup.getName()))
-			update += "groupName=" + toSQL(setGroup.getName()) + ", ";
-		if(!equal(dbGroup.getDescription(), setGroup.getDescription()))
-			update += "groupDescrip=" + toSQL(setGroup.getName()) + ", ";
 		if(dbGroup.isDeleted() != setGroup.isDeleted())
 		{
 			update += "deleted=" + boolToSql(setGroup.isDeleted()) + ", ";
@@ -1639,6 +2064,20 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 				theGroupCache = ArrayUtils.remove(theGroupCache, setGroup);
 			else
 				theGroupCache = ArrayUtils.add(theGroupCache, setGroup);
+			addModification(trans, PrismsSubjectType.group, null, setGroup.isDeleted() ? -1 : 1,
+				dbGroup, null, null, dbGroup.getApp(), null);
+		}
+		if(!dbGroup.getName().equals(setGroup.getName()))
+		{
+			update += "groupName=" + toSQL(setGroup.getName()) + ", ";
+			addModification(trans, PrismsSubjectType.group, GroupChange.name, 0, dbGroup, null,
+				dbGroup.getName(), dbGroup.getApp(), null);
+		}
+		if(!equal(dbGroup.getDescription(), setGroup.getDescription()))
+		{
+			update += "groupDescrip=" + toSQL(setGroup.getName()) + ", ";
+			addModification(trans, PrismsSubjectType.group, GroupChange.descrip, 0, dbGroup, null,
+				dbGroup.getDescription(), dbGroup.getApp(), null);
 		}
 
 		if(update.length() > 0)
@@ -1647,8 +2086,8 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 			String sql = null;
 			try
 			{
-				sql = "UPDATE " + theTransactor.getDbOwner() + "prisms_user_group SET " + update
-					+ " WHERE id=" + dbGroup.getID();
+				sql = "UPDATE " + theTransactor.getTablePrefix() + "prisms_user_group SET "
+					+ update + " WHERE id=" + dbGroup.getID();
 				stmt.executeUpdate(sql);
 			} catch(SQLException e)
 			{
@@ -1669,7 +2108,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 				String sql = null;
 				try
 				{
-					sql = "INSERT INTO " + theTransactor.getDbOwner()
+					sql = "INSERT INTO " + theTransactor.getTablePrefix()
 						+ "prisms_group_permissions (assocGroup, pApp, assocPermission) VALUES ("
 						+ dbGroup.getID() + ", " + toSQL(o.getApp().getName()) + ", "
 						+ toSQL(o.getName()) + ")";
@@ -1678,6 +2117,15 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 				{
 					log.error("Could not insert group permission: SQL=" + sql, e);
 				}
+				try
+				{
+					addModification(trans, PrismsSubjectType.group, GroupChange.permission, 1,
+						dbGroup, o, null, dbGroup.getApp(), null);
+				} catch(PrismsException e)
+				{
+					log.error("Could not add modification for group permission", e);
+				}
+				authChange[0] = true;
 				return o;
 			}
 
@@ -1686,7 +2134,7 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 				String sql = null;
 				try
 				{
-					sql = "DELETE FROM " + theTransactor.getDbOwner()
+					sql = "DELETE FROM " + theTransactor.getTablePrefix()
 						+ "prisms_group_permissions WHERE assocGroup=" + dbGroup.getID()
 						+ " AND pApp=" + toSQL(o.getApp().getName()) + " AND assocPermission="
 						+ toSQL(o.getName());
@@ -1695,6 +2143,15 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 				{
 					log.error("Could not remove group permission: SQL=" + sql, e);
 				}
+				try
+				{
+					addModification(trans, PrismsSubjectType.group, GroupChange.permission, -1,
+						dbGroup, o, null, dbGroup.getApp(), null);
+				} catch(PrismsException e)
+				{
+					log.error("Could not add modification for group permission", e);
+				}
+				authChange[0] = true;
 				return null;
 			}
 
@@ -1704,20 +2161,24 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 				return o1;
 			}
 		});
+		return authChange[0];
 	}
 
-	void dbRemoveGroup(DBGroup group, Statement stmt) throws PrismsException
+	void dbRemoveGroup(UserGroup group, Statement stmt, RecordsTransaction trans)
+		throws PrismsException
 	{
 		String sql = null;
 		try
 		{
-			sql = "DELETE FROM " + theTransactor.getDbOwner() + "prisms_user_group WHERE id="
+			sql = "DELETE FROM " + theTransactor.getTablePrefix() + "prisms_user_group WHERE id="
 				+ group.getID();
 			stmt.execute(sql);
 		} catch(SQLException e)
 		{
 			throw new PrismsException("Could not delete group: SQL=" + sql, e);
 		}
+		addModification(trans, PrismsSubjectType.group, null, -1, group, null, null,
+			group.getApp(), null);
 	}
 
 	/**
@@ -1728,10 +2189,10 @@ public class DBUserSource implements prisms.arch.ds.ManageableUserSource
 	 */
 	public static String join(long [] hash)
 	{
-		String ret = "";
+		StringBuilder ret = new StringBuilder();
 		for(int h = 0; h < hash.length; h++)
-			ret += hash[h] + (h < hash.length - 1 ? ":" : "");
-		return ret;
+			ret.append(hash[h] + (h < hash.length - 1 ? ":" : ""));
+		return ret.toString();
 	}
 
 	/**
