@@ -6,9 +6,7 @@ package prisms.util;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 
-/**
- * A utility class to simplify manipulating certain kinds of data in the JSON format
- */
+/** A utility class to simplify manipulating certain kinds of data in the JSON format */
 public class JsonUtils
 {
 	private JsonUtils()
@@ -28,75 +26,49 @@ public class JsonUtils
 		{
 			org.json.simple.JSONObject actionObj = new org.json.simple.JSONObject();
 			actionObj.put("text", a.getText());
-			actionObj.put("multiple", new Boolean(a.getMultiple()));
+			actionObj.put("multiple", Boolean.valueOf(a.getMultiple()));
 			ret.add(actionObj);
 		}
 		return ret;
 	}
 
 	/**
-	 * Serializes a color to its HTML markup (e.g. "#ff0000" for red)
+	 * Parses a color from a JSON object. The normal RGB channels may be specified as integer values
+	 * with "red"/"green"/"blue" keys or "r"/"g"/"b" keys. The alpha channel may be specified as
+	 * "alpha" (if the "red"/"green"/"blue" scheme is used) or "a" (with the "r"/"g"/"b" scheme).
 	 * 
-	 * @param c The color to serialize
-	 * @return The HTML markup of the color
+	 * @param jsonColor The JSON object to parse the color from
+	 * @return The parsed color
 	 */
-	public static String toHTML(java.awt.Color c)
+	public static java.awt.Color deserializeColor(JSONObject jsonColor)
 	{
-		String ret = "#";
-		String hex;
-		hex = Integer.toHexString(c.getRed());
-		if(hex.length() < 2)
-			hex = "0" + hex;
-		ret += hex;
-		hex = Integer.toHexString(c.getGreen());
-		if(hex.length() < 2)
-			hex = "0" + hex;
-		ret += hex;
-		hex = Integer.toHexString(c.getBlue());
-		if(hex.length() < 2)
-			hex = "0" + hex;
-		ret += hex;
-		return ret;
-	}
-
-	/**
-	 * Serializes a color to its HTML markup <b>plus its alpha value</b> (e.g. "#ff000000" for red)
-	 * 
-	 * @param c The color to serialize
-	 * @return The HTML markup plus alpha of the color
-	 */
-	public static String toHTMLA(java.awt.Color c)
-	{
-		String ret = toHTML(c);
-		String hex = Integer.toHexString(c.getAlpha());
-		if(hex.length() < 2)
-			hex = "0" + hex;
-		return ret + hex;
-	}
-
-	/**
-	 * Parses a java.awt.Color from an HTML color string in the form '#RRGGBB' where RR, GG, and BB
-	 * are the red, green, and blue bytes in hexadecimal form
-	 * 
-	 * @param htmlColor The HTML color string to parse
-	 * @return The java.awt.Color represented by the HTML color string
-	 */
-	public static java.awt.Color fromHTML(String htmlColor)
-	{
-		if(htmlColor.charAt(0) != '#')
-			throw new IllegalArgumentException(htmlColor + " is not an HTML color string");
-		int r, g, b, a = -1;
-		if(htmlColor.length() == 9)
-			a = Integer.parseInt(htmlColor.substring(7, 9), 16);
-		else if(htmlColor.length() != 7)
-			throw new IllegalArgumentException(htmlColor + " is not an HTML color string");
-		r = Integer.parseInt(htmlColor.substring(1, 3), 16);
-		g = Integer.parseInt(htmlColor.substring(3, 5), 16);
-		b = Integer.parseInt(htmlColor.substring(5, 7), 16);
-		if(a >= 0)
-			return new java.awt.Color(r, g, b, a);
+		int r, g, b, a;
+		if(jsonColor.containsKey("red"))
+		{
+			if(jsonColor.containsKey("alpha"))
+				a = ((Integer) jsonColor.get("alpha")).intValue();
+			else
+				a = -1;
+			r = ((Integer) jsonColor.get("red")).intValue();
+			g = ((Integer) jsonColor.get("green")).intValue();
+			b = ((Integer) jsonColor.get("blue")).intValue();
+		}
+		else if(jsonColor.containsKey("r"))
+		{
+			if(jsonColor.containsKey("a"))
+				a = ((Integer) jsonColor.get("a")).intValue();
+			else
+				a = -1;
+			r = ((Integer) jsonColor.get("r")).intValue();
+			g = ((Integer) jsonColor.get("g")).intValue();
+			b = ((Integer) jsonColor.get("b")).intValue();
+		}
 		else
+			throw new IllegalArgumentException("Argument " + jsonColor + " is not a valid color");
+		if(a < 0)
 			return new java.awt.Color(r, g, b);
+		else
+			return new java.awt.Color(r, g, b, a);
 	}
 
 	/**
