@@ -15,7 +15,7 @@ public class UserEventGlobalizer implements prisms.arch.event.ConfiguredPEL
 
 	prisms.arch.PrismsSession theSession;
 
-	public void configure(prisms.arch.PrismsSession session, org.dom4j.Element configEl)
+	public void configure(prisms.arch.PrismsSession session, prisms.arch.PrismsConfig config)
 	{
 		theSession = session;
 	}
@@ -24,7 +24,7 @@ public class UserEventGlobalizer implements prisms.arch.event.ConfiguredPEL
 	{
 		if(evt.getProperty("globalEventID") != null)
 			return;
-		evt.setProperty("globalEventID", new Integer(id));
+		evt.setProperty("globalEventID", Integer.valueOf(id));
 		id++;
 		theSession.getApp().runSessionTask(theSession,
 			new prisms.arch.PrismsApplication.SessionTask()
